Update: Irrigation schedule suggestion logic is separated into several classes